# MyJni

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/myjni/: ExampleInstrumentedTest.java
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/myjni/: MainActivity.java
app/src/main/java/com/example/myjni/bean/: Person.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/myjni/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
