# For more information about using CMake with Android Studio, read the
# documentation: https://d.android.com/studio/projects/add-native-code.html

# Sets the minimum version of CMake required to build the native library.

cmake_minimum_required(VERSION 3.4.1)

# 打印日志
message("当前CMake的路径是：${CMAKE_SOURCE_DIR}")
message("当前 CMAKE_ANDROID_ARCH_ABI 的路径是：${CMAKE_ANDROID_ARCH_ABI}")

# 批量引入源文件
file(GLOB allCpp *.cpp)

# Creates and names a library, sets it as either STATIC
# or SHARED, and provides the relative paths to its source code.
# You can define multiple libraries, and CMake builds them for you.
# Gradle automatically packages shared libraries with your APK.

add_library( # Sets the name of the library.
             native-lib

             # Sets the library as a shared library.
             SHARED

             # Provides a relative path to your source file(s).
             #native-lib.cpp 替换为  ${allCpp} 批量导入文件
            ${allCpp}
        )

# 导入静态库
#add_library(test_a STATIC IMPORTED)

# 开始真正的导入
#set_target_properties(
#        test_a PROPERTIES
##        IMPORTED_LINK_INTERFACE_LIBRARIES ""
#        IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/libtest.a
##        IMPORTED_LOCATION ${CMAKE_SOURCE_DIR}/test_a${ANDROID_ABI}.a
#)

# Searches for a specified prebuilt library and stores the path as a
# variable. Because CMake includes system libraries in the search path by
# default, you only need to specify the name of the public NDK library
# you want to add. CMake verifies that the library exists before
# completing its build.

find_library( # Sets the name of the path variable.
              log-lib

              # Specifies the name of the NDK library that
              # you want CMake to locate.
              log )


message("当前的log路径在哪里啊 >>>>>>>>>>>>>>>>> ${log-lib}")

# Specifies libraries CMake should link to your target library. You
# can link multiple libraries, such as libraries you define in this
# build script, prebuilt third-party libraries, or system libraries.

target_link_libraries( # Specifies the target library.
                       native-lib

                       # Links the target library to the log library
                       # included in the NDK.
                       ${log-lib})